Added Swagger For CURD API
